fix: improve layout for article components; enhance responsiveness and spacing

--- a/website-structure/css/styles.css
+++ b/website-structure/css/styles.css
@@ -37,6 +37,7 @@ h2,h3{
     color: #1792d2;
     font-size: .75rem;
     margin: 0;
+    text-transform: uppercase;
 }
 
 .article-title{
@@ -107,7 +108,6 @@ img{
         text-align: center;
     }
 } */
-
 /* navigation */
 
 nav ul {
@@ -115,10 +115,12 @@ nav ul {
     padding: 0;
     display: flex;
     justify-content: center;
+    
 }
 
 nav li {
     margin-left: 2em;
+    text-transform: uppercase;
 }
 
 nav a {
